--- a/Client/index.html
+++ b/Client/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <button id="play">Play</button>
-    <video width="600" height="400" id="remote" autoplay></video>
+    <video width="600" height="400" id="remote"></video>
 </body>
 </html>
