--- a/Client/index.html
+++ b/Client/index.html
@@ -4,12 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teleport</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="style.css" rel="stylesheet" />
     <script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
     <script src="engine.js" defer></script>
 </head>
 <body>
-    <button id="play">Play</button>
+    <section class="hero is-fullheight is-flex is-flex-wrap-wrap is-justify-content-space-evenly is-align-items-center is-flex-direction-row" id="web">
+        <div class="brand">
+            <img src="./one.png" height="500" width="300"/>
+        </div>
+        <div class="mx-4">
+            <p class="title-style title is-size-1 poppins-bold">Teleport</p>
+            <p class="poppins-regular is-size-4">WebRTC Remote Desktop Access</p>
+            <div class="is-flex mt-4">
+                <div class="field mt-3">
+                    <p class="control has-icons-left has-icons-right">
+                      <input class="input is-small poppins-regular" type="email" placeholder="Local IP Address" />
+                      <span class="icon is-small is-left">
+                        <i class="fa-solid fa-wifi"></i>
+                      </span>
+                    </p>
+                </div>
+                <div class="buttons are-small ml-3">
+                    <button class="button">
+                        <img src="./cast.png" width="20" height="30" />
+                    </button>
+                </div>                  
+            </div>
+            <p class="poppins-regular" style="font-size: 60%;">Example: 192.168.x.x</p>
+        </div>
+        <div class="content has-text-centered">
+            <p class="poppins-regular">
+            <strong>Teleport</strong> by <a href="https://jgthms.com">H.Ragul</a>.
+            A web client for teleport host.
+            </p>
+        </div>
+    </section>
     <video width="600" height="400" id="remote"></video>
 </body>
 </html>
