--- a/Client/index.html
+++ b/Client/index.html
@@ -21,14 +21,14 @@
             <div class="is-flex mt-4">
                 <div class="field mt-3">
                     <p class="control has-icons-left has-icons-right">
-                      <input class="input is-small poppins-regular" type="email" placeholder="Local IP Address" />
+                      <input class="input is-small poppins-regular" type="email" placeholder="Local IP Address" id="address"/>
                       <span class="icon is-small is-left">
                         <i class="fa-solid fa-wifi"></i>
                       </span>
                     </p>
                 </div>
                 <div class="buttons are-small ml-3">
-                    <button class="button">
+                    <button class="button" id="stream">
                         <img src="./cast.png" width="20" height="30" />
                     </button>
                 </div>                  
