--- a/Client/index.html
+++ b/Client/index.html
@@ -22,15 +22,15 @@
                 <div class="is-flex mt-4">
                     <div class="field mt-3">
                         <p class="control has-icons-left has-icons-right">
-                          <input class="input is-small poppins-regular" type="email" placeholder="Local IP Address" id="address"/>
-                          <span class="icon is-small is-left">
+                          <input class="input poppins-regular" type="email" placeholder="Local IP Address" id="address"/>
+                          <span class="icon is-left">
                             <i class="fa-solid fa-wifi"></i>
                           </span>
                         </p>
                     </div>
-                    <div class="buttons are-small ml-3">
+                    <div class="buttons ml-3">
                         <button class="button" id="stream">
-                            <img src="./cast.png" width="20" height="30" />
+                            <img src="./cast.png" width="26" height="36" />
                         </button>
                     </div>                  
                 </div>
@@ -39,7 +39,7 @@
         </div>
         <div class="content has-text-centered">
             <p class="poppins-regular">
-            <strong>Teleport</strong> by <a href="https://jgthms.com">H.Ragul</a>.
+            <strong>Teleport</strong> by <a href="https://ragul-realm.web.app/">H.Ragul</a>.
             A web client for teleport host.
             </p>
         </div>
