--- a/Client/index.html
+++ b/Client/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section class="hero is-fullheight is-flex is-justify-content-space-evenly" id="web">
-        <div class="wrapper wrapper is-flex is-flex-wrap-wrap is-justify-content-space-evenly is-flex-direction-row">
+        <div class="wrapper wrapper is-flex is-flex-wrap-wrap is-justify-content-space-evenly is-align-items-center is-flex-direction-row">
             <div class="brand">
                 <img src="./one.png" height="500" width="300"/>
             </div>
